<resources>
    <string name="app_name">VideoApp</string>
    <string name="multi_speed_play_bar_text">两倍速播放中…</string>
    <string name="show_seek_time_default_time">00:00/00:00</string>
    <string name="video_item_text_default_str">暂时的文案</string>

    <string name="is_in_refreshing_text">当前正在刷新数据</string>

    <string name="loading_dialog_text">加载数据中......</string>

    <string name="no_more_data_loading_text">无更多数据加载</string>

    <string name="video_played_image_desc">video_played_image</string>
    <string name="video_paused_image_desc">video_played_image</string>
    <string name="horizontal_screen_button_desc">horizontal_screen_button</string>
    <string name="vertical_screen_button_desc">vertical_screen_button</string>
    <string name="video_item_image_desc">video_item_image</string>
</resources>