<?xml version="1.0" encoding="utf-8"?>
<com.example.videoapp.views.customviews.VideoPlayerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/video_player_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:layout_gravity="center"
        tools:context=".views.activities.VideoPlayerActivity"
        android:orientation="vertical">

    <TextureView
            android:id="@+id/video_texture_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
            android:id="@+id/multi_speed_play_bar"
            android:layout_width="@dimen/function_bar_width"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@drawable/function_bar_bg"
            android:padding="@dimen/function_bar_around_padding"
            android:layout_marginTop="@dimen/multi_speed_play_bar_margin_top"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/multi_speed_play_bar_text"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/function_bar"
            android:layout_width="@dimen/function_bar_width"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@drawable/function_bar_bg"
            android:visibility="gone"
            android:padding="@dimen/function_bar_around_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
                android:id="@+id/volume_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/volume_icon"
                android:layout_gravity="center"
                android:visibility="gone"/>

        <ImageView
                android:id="@+id/light_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/light_icon"
                android:layout_gravity="center"
                android:visibility="gone"/>

        <SeekBar
                android:id="@+id/function_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/video_function_bar"
            android:layout_width="@dimen/function_bar_width"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@drawable/function_bar_bg"
            android:visibility="gone"
            android:padding="@dimen/function_bar_around_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:id="@+id/show_seek_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_seek_time_default_time"
                android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/tool_bar_group"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/tool_bar_margin_bottom"
            android:gravity="center_horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/top_tool_bar_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/video_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/tool_bar_item_margin_start"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                    android:id="@+id/video_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginEnd="@dimen/tool_bar_item_margin_end"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <SeekBar
                android:id="@+id/video_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bottom_tool_bar_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/video_played_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/video_paused"
                    android:layout_marginStart="@dimen/tool_bar_item_margin_start"
                    android:contentDescription="@string/video_played_image_desc"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                    android:id="@+id/video_paused_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/video_played"
                    android:visibility="gone"
                    android:layout_marginStart="@dimen/tool_bar_item_margin_start"
                    android:contentDescription="@string/video_paused_image_desc"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                    android:id="@+id/horizontal_screen_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/horizontal_screen"
                    android:layout_marginEnd="@dimen/tool_bar_item_margin_end"
                    android:contentDescription="@string/horizontal_screen_button_desc"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                    android:id="@+id/vertical_screen_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/vertical_screen"
                    android:visibility="gone"
                    android:layout_marginEnd="@dimen/tool_bar_item_margin_end"
                    android:contentDescription="@string/vertical_screen_button_desc"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</com.example.videoapp.views.customviews.VideoPlayerView>